# lzc-player

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Main.qml  main.cpp  mpvobject.cpp  mpvobject.h
.github/workflows/: build-packages.yml
assets/linux/: lzc-player.desktop
cmake/: fixup_macos_bundle.cmake
common/: qthelper.hpp
debian/: changelog  control  copyright  lzc-player.substvars  rules
docs/: architecture.md  build.md
qml/: Main.qml
qml/components/: EpisodeSelector.qml  PlaybackControlsBar.qml  PlaybackProgressBar.qml  PlaybackSpeedSelector.qml  QualitySelector.qml  SubtitleSelector.qml  VolumeSelector.qml
qml/utils/: PlayerFormat.js
scripts/: build-macos.sh  build-msys2.sh  package-appimage.sh  package-deb.sh  package-linux.sh  package-windows.sh
src/app/: main.cpp  playeripcserver.cpp  playeripcserver.h  playerwindow.cpp  playerwindow.h
src/player/: mpvplayersession.cpp  mpvplayersession.h  mpvplayerview.cpp  mpvplayerview.h  mpvtrackmapper.cpp  mpvtrackmapper.h  mpvwindowrenderer.cpp  mpvwindowrenderer.h  videoplayerview.cpp  videoplayerview.h
